--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,6 @@ body {
   padding: 0;
 
   font-size: var(--fs);
-  font-weight: var(--fw-4);
   font-family: var(--ff);
   background-color: var(--dark-cyan);
 
@@ -30,6 +29,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  background-image: url('../images/bg-pattern-top.svg'),
+    url('../images/bg-pattern-bottom.svg');
+  background-repeat: no-repeat, no-repeat;
+  background-position: right 45vw bottom 25vh, left 45vw top 44vh;
 }
 
 .sr-only:not(:focus):not(:active) {
@@ -43,7 +47,7 @@ body {
 }
 
 .card {
-  max-width: 350px;
+  max-width: 375px;
   border-radius: 1rem;
   background-color: white;
   overflow: hidden;
@@ -51,7 +55,7 @@ body {
 
 .banner {
   background: url('../images/bg-pattern-card.svg');
-  width: 350px;
+  width: 375px;
   height: 150px;
 }
 
@@ -72,6 +76,7 @@ body {
 .card__content {
   text-align: center;
   margin-top: 5rem;
+  margin-bottom: 2rem;
 }
 
 .card__list {
@@ -79,5 +84,18 @@ body {
   list-style-type: none;
   justify-content: space-around;
 
+  border-top: 1px solid var(--dark-gray);
+
   padding: 0;
+}
+
+.numbers {
+  font-weight: var(--fw-7);
+}
+
+.age,
+.city,
+.infos {
+  color: var(--dark-gray);
+  font-weight: var(--fw-4);
 }
